[project]
name = "python_crawl_1101"
version = "0.1.0"
description = "職能發展學院"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "crawl4ai>=0.7.7",
    "ipykernel>=7.1.0",
    "nest-asyncio>=1.6.0",
    "pandas>=2.3.3",
    "playwright>=1.56.0",
    "requests>=2.32.5",
    "streamlit>=1.28.0",
]
